Upnp/Api/C/CpLinnCoUkPreamp4.h


DllExport THandle CpProxyLinnCoUkPreamp4Create(CpDeviceC aDevice);
DllExport void CpProxyLinnCoUkPreamp4Destroy(THandle aHandle);
DllExport void CpProxyLinnCoUkPreamp4SyncVolumeInc(THandle aHandle);
DllExport void CpProxyLinnCoUkPreamp4BeginVolumeInc(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkPreamp4EndVolumeInc(THandle aHandle, ZappHandleAsync aAsync);
DllExport void CpProxyLinnCoUkPreamp4SyncVolumeDec(THandle aHandle);
DllExport void CpProxyLinnCoUkPreamp4BeginVolumeDec(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkPreamp4EndVolumeDec(THandle aHandle, ZappHandleAsync aAsync);
DllExport void CpProxyLinnCoUkPreamp4SyncSetVolume(THandle aHandle, uint32_t aaVolume);
DllExport void CpProxyLinnCoUkPreamp4BeginSetVolume(THandle aHandle, uint32_t aaVolume, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkPreamp4EndSetVolume(THandle aHandle, ZappHandleAsync aAsync);
DllExport void CpProxyLinnCoUkPreamp4SyncVolume(THandle aHandle, uint32_t* aaVolume);
DllExport void CpProxyLinnCoUkPreamp4BeginVolume(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkPreamp4EndVolume(THandle aHandle, ZappHandleAsync aAsync, uint32_t* aaVolume);
DllExport void CpProxyLinnCoUkPreamp4SyncSetMute(THandle aHandle, uint32_t aaMute);
DllExport void CpProxyLinnCoUkPreamp4BeginSetMute(THandle aHandle, uint32_t aaMute, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkPreamp4EndSetMute(THandle aHandle, ZappHandleAsync aAsync);
DllExport void CpProxyLinnCoUkPreamp4SyncMute(THandle aHandle, uint32_t* aaMute);
DllExport void CpProxyLinnCoUkPreamp4BeginMute(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkPreamp4EndMute(THandle aHandle, ZappHandleAsync aAsync, uint32_t* aaMute);
DllExport void CpProxyLinnCoUkPreamp4SyncSetBalance(THandle aHandle, int32_t aaBalance);
DllExport void CpProxyLinnCoUkPreamp4BeginSetBalance(THandle aHandle, int32_t aaBalance, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkPreamp4EndSetBalance(THandle aHandle, ZappHandleAsync aAsync);
DllExport void CpProxyLinnCoUkPreamp4SyncBalance(THandle aHandle, int32_t* aaBalance);
DllExport void CpProxyLinnCoUkPreamp4BeginBalance(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkPreamp4EndBalance(THandle aHandle, ZappHandleAsync aAsync, int32_t* aaBalance);
DllExport void CpProxyLinnCoUkPreamp4SyncSetVolumeLimit(THandle aHandle, uint32_t aaVolumeLimit);
DllExport void CpProxyLinnCoUkPreamp4BeginSetVolumeLimit(THandle aHandle, uint32_t aaVolumeLimit, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkPreamp4EndSetVolumeLimit(THandle aHandle, ZappHandleAsync aAsync);
DllExport void CpProxyLinnCoUkPreamp4SyncVolumeLimit(THandle aHandle, uint32_t* aaVolumeLimit);
DllExport void CpProxyLinnCoUkPreamp4BeginVolumeLimit(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkPreamp4EndVolumeLimit(THandle aHandle, ZappHandleAsync aAsync, uint32_t* aaVolumeLimit);
DllExport void CpProxyLinnCoUkPreamp4SyncSetStartupVolume(THandle aHandle, uint32_t aaStartupVolume);
DllExport void CpProxyLinnCoUkPreamp4BeginSetStartupVolume(THandle aHandle, uint32_t aaStartupVolume, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkPreamp4EndSetStartupVolume(THandle aHandle, ZappHandleAsync aAsync);
DllExport void CpProxyLinnCoUkPreamp4SyncStartupVolume(THandle aHandle, uint32_t* aaStartupVolume);
DllExport void CpProxyLinnCoUkPreamp4BeginStartupVolume(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkPreamp4EndStartupVolume(THandle aHandle, ZappHandleAsync aAsync, uint32_t* aaStartupVolume);
DllExport void CpProxyLinnCoUkPreamp4SyncSetStartupVolumeEnabled(THandle aHandle, uint32_t aaStartupVolumeEnabled);
DllExport void CpProxyLinnCoUkPreamp4BeginSetStartupVolumeEnabled(THandle aHandle, uint32_t aaStartupVolumeEnabled, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkPreamp4EndSetStartupVolumeEnabled(THandle aHandle, ZappHandleAsync aAsync);
DllExport void CpProxyLinnCoUkPreamp4SyncStartupVolumeEnabled(THandle aHandle, uint32_t* aaStartupVolumeEnabled);
DllExport void CpProxyLinnCoUkPreamp4BeginStartupVolumeEnabled(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkPreamp4EndStartupVolumeEnabled(THandle aHandle, ZappHandleAsync aAsync, uint32_t* aaStartupVolumeEnabled);
DllExport void CpProxyLinnCoUkPreamp4SetPropertyVolumeChanged(THandle aHandle, ZappCallback aCallback, void* aPtr);
DllExport void CpProxyLinnCoUkPreamp4SetPropertyMuteChanged(THandle aHandle, ZappCallback aCallback, void* aPtr);
DllExport void CpProxyLinnCoUkPreamp4SetPropertyBalanceChanged(THandle aHandle, ZappCallback aCallback, void* aPtr);
DllExport void CpProxyLinnCoUkPreamp4SetPropertyVolumeLimitChanged(THandle aHandle, ZappCallback aCallback, void* aPtr);
DllExport void CpProxyLinnCoUkPreamp4SetPropertyStartupVolumeChanged(THandle aHandle, ZappCallback aCallback, void* aPtr);
DllExport void CpProxyLinnCoUkPreamp4SetPropertyStartupVolumeEnabledChanged(THandle aHandle, ZappCallback aCallback, void* aPtr);
DllExport void CpProxyLinnCoUkPreamp4PropertyVolume(THandle aHandle, uint32_t* aVolume);
DllExport void CpProxyLinnCoUkPreamp4PropertyMute(THandle aHandle, uint32_t* aMute);
DllExport void CpProxyLinnCoUkPreamp4PropertyBalance(THandle aHandle, int32_t* aBalance);
DllExport void CpProxyLinnCoUkPreamp4PropertyVolumeLimit(THandle aHandle, uint32_t* aVolumeLimit);
DllExport void CpProxyLinnCoUkPreamp4PropertyStartupVolume(THandle aHandle, uint32_t* aStartupVolume);
DllExport void CpProxyLinnCoUkPreamp4PropertyStartupVolumeEnabled(THandle aHandle, uint32_t* aStartupVolumeEnabled);