Upnp/ControlPoint/Services/Cs/CpLinnCoUkPreamp4.cs

using System;
using System.Runtime.InteropServices;
using System.Text;
using Zapp;

namespace Zapp
{
    public class CpProxyLinnCoUkPreamp4 : CpProxy, IDisposable
    {
        [DllImport("CpLinnCoUkPreamp4")]
        static extern IntPtr CpProxyLinnCoUkPreamp4Create(IntPtr aDeviceHandle);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern void CpProxyLinnCoUkPreamp4Destroy(IntPtr aHandle);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4SyncVolumeInc(IntPtr aHandle);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4BeginVolumeInc(IntPtr aHandle, CallbackActionComplete aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe int CpProxyLinnCoUkPreamp4EndVolumeInc(IntPtr aHandle, IntPtr aAsync);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4SyncVolumeDec(IntPtr aHandle);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4BeginVolumeDec(IntPtr aHandle, CallbackActionComplete aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe int CpProxyLinnCoUkPreamp4EndVolumeDec(IntPtr aHandle, IntPtr aAsync);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4SyncSetVolume(IntPtr aHandle, uint aaVolume);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4BeginSetVolume(IntPtr aHandle, uint aaVolume, CallbackActionComplete aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe int CpProxyLinnCoUkPreamp4EndSetVolume(IntPtr aHandle, IntPtr aAsync);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4SyncVolume(IntPtr aHandle, uint* aaVolume);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4BeginVolume(IntPtr aHandle, CallbackActionComplete aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe int CpProxyLinnCoUkPreamp4EndVolume(IntPtr aHandle, IntPtr aAsync, uint* aaVolume);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4SyncSetMute(IntPtr aHandle, uint aaMute);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4BeginSetMute(IntPtr aHandle, uint aaMute, CallbackActionComplete aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe int CpProxyLinnCoUkPreamp4EndSetMute(IntPtr aHandle, IntPtr aAsync);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4SyncMute(IntPtr aHandle, uint* aaMute);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4BeginMute(IntPtr aHandle, CallbackActionComplete aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe int CpProxyLinnCoUkPreamp4EndMute(IntPtr aHandle, IntPtr aAsync, uint* aaMute);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4SyncSetBalance(IntPtr aHandle, int aaBalance);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4BeginSetBalance(IntPtr aHandle, int aaBalance, CallbackActionComplete aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe int CpProxyLinnCoUkPreamp4EndSetBalance(IntPtr aHandle, IntPtr aAsync);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4SyncBalance(IntPtr aHandle, int* aaBalance);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4BeginBalance(IntPtr aHandle, CallbackActionComplete aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe int CpProxyLinnCoUkPreamp4EndBalance(IntPtr aHandle, IntPtr aAsync, int* aaBalance);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4SyncSetVolumeLimit(IntPtr aHandle, uint aaVolumeLimit);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4BeginSetVolumeLimit(IntPtr aHandle, uint aaVolumeLimit, CallbackActionComplete aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe int CpProxyLinnCoUkPreamp4EndSetVolumeLimit(IntPtr aHandle, IntPtr aAsync);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4SyncVolumeLimit(IntPtr aHandle, uint* aaVolumeLimit);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4BeginVolumeLimit(IntPtr aHandle, CallbackActionComplete aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe int CpProxyLinnCoUkPreamp4EndVolumeLimit(IntPtr aHandle, IntPtr aAsync, uint* aaVolumeLimit);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4SyncSetStartupVolume(IntPtr aHandle, uint aaStartupVolume);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4BeginSetStartupVolume(IntPtr aHandle, uint aaStartupVolume, CallbackActionComplete aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe int CpProxyLinnCoUkPreamp4EndSetStartupVolume(IntPtr aHandle, IntPtr aAsync);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4SyncStartupVolume(IntPtr aHandle, uint* aaStartupVolume);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4BeginStartupVolume(IntPtr aHandle, CallbackActionComplete aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe int CpProxyLinnCoUkPreamp4EndStartupVolume(IntPtr aHandle, IntPtr aAsync, uint* aaStartupVolume);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4SyncSetStartupVolumeEnabled(IntPtr aHandle, uint aaStartupVolumeEnabled);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4BeginSetStartupVolumeEnabled(IntPtr aHandle, uint aaStartupVolumeEnabled, CallbackActionComplete aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe int CpProxyLinnCoUkPreamp4EndSetStartupVolumeEnabled(IntPtr aHandle, IntPtr aAsync);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4SyncStartupVolumeEnabled(IntPtr aHandle, uint* aaStartupVolumeEnabled);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4BeginStartupVolumeEnabled(IntPtr aHandle, CallbackActionComplete aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe int CpProxyLinnCoUkPreamp4EndStartupVolumeEnabled(IntPtr aHandle, IntPtr aAsync, uint* aaStartupVolumeEnabled);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern void CpProxyLinnCoUkPreamp4SetPropertyVolumeChanged(IntPtr aHandle, Callback aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern void CpProxyLinnCoUkPreamp4SetPropertyMuteChanged(IntPtr aHandle, Callback aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern void CpProxyLinnCoUkPreamp4SetPropertyBalanceChanged(IntPtr aHandle, Callback aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern void CpProxyLinnCoUkPreamp4SetPropertyVolumeLimitChanged(IntPtr aHandle, Callback aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern void CpProxyLinnCoUkPreamp4SetPropertyStartupVolumeChanged(IntPtr aHandle, Callback aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern void CpProxyLinnCoUkPreamp4SetPropertyStartupVolumeEnabledChanged(IntPtr aHandle, Callback aCallback, IntPtr aPtr);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4PropertyVolume(IntPtr aHandle, uint* aVolume);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4PropertyMute(IntPtr aHandle, uint* aMute);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4PropertyBalance(IntPtr aHandle, int* aBalance);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4PropertyVolumeLimit(IntPtr aHandle, uint* aVolumeLimit);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4PropertyStartupVolume(IntPtr aHandle, uint* aStartupVolume);
        [DllImport("CpLinnCoUkPreamp4")]
        static extern unsafe void CpProxyLinnCoUkPreamp4PropertyStartupVolumeEnabled(IntPtr aHandle, uint* aStartupVolumeEnabled);
        [DllImport("ZappUpnp")]
        static extern unsafe void ZappFree(void* aPtr);

        private GCHandle iGch;
        private CallbackPropertyChanged iVolumeChanged;
        private CallbackPropertyChanged iMuteChanged;
        private CallbackPropertyChanged iBalanceChanged;
        private CallbackPropertyChanged iVolumeLimitChanged;
        private CallbackPropertyChanged iStartupVolumeChanged;
        private CallbackPropertyChanged iStartupVolumeEnabledChanged;
        private Callback iCallbackVolumeChanged;
        private Callback iCallbackMuteChanged;
        private Callback iCallbackBalanceChanged;
        private Callback iCallbackVolumeLimitChanged;
        private Callback iCallbackStartupVolumeChanged;
        private Callback iCallbackStartupVolumeEnabledChanged;

        public CpProxyLinnCoUkPreamp4(CpDevice aDevice)
        {
            iHandle = CpProxyLinnCoUkPreamp4Create(aDevice.Handle());
            iGch = GCHandle.Alloc(this);
        }

        public unsafe void SyncVolumeInc()
        {
			{
				CpProxyLinnCoUkPreamp4SyncVolumeInc(iHandle);
			}
        }

        public unsafe void BeginVolumeInc(CallbackAsyncComplete aCallback)
        {
            GCHandle gch = GCHandle.Alloc(aCallback);
            IntPtr ptr = GCHandle.ToIntPtr(gch);
            CpProxyLinnCoUkPreamp4BeginVolumeInc(iHandle, iActionComplete, ptr);
        }

        public unsafe void EndVolumeInc(IntPtr aAsyncHandle)
        {
			{
				if (0 != CpProxyLinnCoUkPreamp4EndVolumeInc(iHandle, aAsyncHandle))
				{
					throw(new ProxyError());
				}
			}
        }

        public unsafe void SyncVolumeDec()
        {
			{
				CpProxyLinnCoUkPreamp4SyncVolumeDec(iHandle);
			}
        }

        public unsafe void BeginVolumeDec(CallbackAsyncComplete aCallback)
        {
            GCHandle gch = GCHandle.Alloc(aCallback);
            IntPtr ptr = GCHandle.ToIntPtr(gch);
            CpProxyLinnCoUkPreamp4BeginVolumeDec(iHandle, iActionComplete, ptr);
        }

        public unsafe void EndVolumeDec(IntPtr aAsyncHandle)
        {
			{
				if (0 != CpProxyLinnCoUkPreamp4EndVolumeDec(iHandle, aAsyncHandle))
				{
					throw(new ProxyError());
				}
			}
        }

        public unsafe void SyncSetVolume(uint aaVolume)
        {
			{
				CpProxyLinnCoUkPreamp4SyncSetVolume(iHandle, aaVolume);
			}
        }

        public unsafe void BeginSetVolume(uint aaVolume, CallbackAsyncComplete aCallback)
        {
            GCHandle gch = GCHandle.Alloc(aCallback);
            IntPtr ptr = GCHandle.ToIntPtr(gch);
            CpProxyLinnCoUkPreamp4BeginSetVolume(iHandle, aaVolume, iActionComplete, ptr);
        }
